--- a/src/main/java/PropertiesFile/ProjectName.properties
+++ b/src/main/java/PropertiesFile/ProjectName.properties
@@ -1,5 +1,7 @@
 #key=Value
 #HN url
 HomePageUrl=https://www.harveynorman.com.au
+CreateAccount=https://www.harveynorman.com.au/customer/account/create/
 #GG url
+GGHomePageUrl01=https://www.thegoodguys.com.au/
 GGHomePageUrl=https://www.thegoodguys.com.au/UserRegistrationForm?myAcctMain=1&new=Y&catalogId=30000&langId=-1&storeId=900
